--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=duoclone
+spring.data.mongodb.uri=mongodb://localhost:27017/code_vocab
+
+jwt.secret=jwtsecretkeyjwtsecretkeyjwtsecretkey
+jwt.expiration=86400000
