--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,40 @@
 spring.application.name=duoclone
+
+
+# ===============================
+# Server Configuration
+# ===============================
+server.port=8080
+
+# ===============================
+# Application Name
+# ===============================
+
+
+# ===============================
+# MongoDB Configuration
+# ===============================
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+# (replace <YOUR_DB> with your mongodb database name)
+spring.data.mongodb.database=duoclone
+
+# ===============================
+# Jackson (JSON Formatting)
+# ===============================
+spring.jackson.serialization.indent_output=true
+
+# ===============================
+# Logging (Optional but Useful)
+# ===============================
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+
+# ===============================
+# Security (JWT already implemented)
+# ===============================
+# Keep your existing JWT properties here
+# Example:
+# jwt.secret=your_secret_key
+# jwt.expiration=86400000
+
