--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,6 @@ logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 # ===============================
 # Keep your existing JWT properties here
 # Example:
-# jwt.secret=your_secret_key
-# jwt.expiration=86400000
+jwt.secret=a89b81506e8039f57fb0b432b0d09b28
+jwt.expiration=86400000
 
