updated entire backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,17 +7,12 @@ spring.application.name=duoclone
 server.port=8080
 
 # ===============================
-# Application Name
-# ===============================
-
-
-# ===============================
 # MongoDB Configuration
 # ===============================
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-# (replace <YOUR_DB> with your mongodb database name)
 spring.data.mongodb.database=duoclone
+spring.data.mongodb.auto-index-creation=true
 
 # ===============================
 # Jackson (JSON Formatting)
@@ -25,16 +20,18 @@ spring.data.mongodb.database=duoclone
 spring.jackson.serialization.indent_output=true
 
 # ===============================
-# Logging (Optional but Useful)
+# Logging
 # ===============================
 logging.level.org.springframework.web=INFO
-logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=INFO
+logging.level.org.springframework.security=INFO
+logging.level.com.example.duoclone=DEBUG
 
 # ===============================
 # Security (JWT already implemented)
+# Note: Roles in DB are stored as "USER" and "ADMIN" (without ROLE_ prefix)
+# Spring Security adds ROLE_ prefix internally for authorization
 # ===============================
-# Keep your existing JWT properties here
-# Example:
-jwt.secret=a89b81506e8039f57fb0b432b0d09b28
+jwt.secret=3s6v9y$B&E)H@McQfTjWnZr4u7x!A%D*G-KaPdSgUkXp2s5v8y/B?E(H+MbQeThW
 jwt.expiration=86400000
 
